--- a/src/main/resources/templates/admin/formUpdateMovie.html
+++ b/src/main/resources/templates/admin/formUpdateMovie.html
@@ -264,7 +264,7 @@
 		<div class="modal-body">
 		  <form th:action="@{/updateTitle}" method="POST">
 			<div class="mb-3">
-			  <label for="recipient-name" class="col-form-label">Nuovo Titolo</label>
+			  <label for="recipient-name" class="col-form-label">Aggiorna Nome/Cognome</label>
 			  <input type="text" class="form-control" id="recipient-name" name="newTitle">
 			</div>
 			<div class="mb-3">
