--- a/src/main/resources/templates/admin/formUpdateMovie.html
+++ b/src/main/resources/templates/admin/formUpdateMovie.html
@@ -202,7 +202,12 @@
 	  </div>
 
 	  <div class="container my-5" th:if="${!reviews.isEmpty()}"  >
-		<h1 class="text-center" style="margin-bottom: 1em;">Le ultime recensioni</h1>
+		<div class="d-flex align-items-center">
+			<h1 class="text-center">Le ultime recensioni</h1>
+			<a th:href="@{|/movie/${movie.id}/reviews|}">
+				<h5 class="clickable-link">Vedi tutte le recensioni</h5>
+			</a>
+			</div>
 		
 		
 		  
