--- a/src/main/resources/templates/formLogin.html
+++ b/src/main/resources/templates/formLogin.html
@@ -2,46 +2,57 @@
 <html>
 
 <head>
-	<title>
-		SiwMovie - Login
-	</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+    <title>SiwMovie - Login</title>
+    <link rel="stylesheet" href="/css/stile.css" />
 </head>
 
 <body>
-	<header>
-		<div th:if="${#request.userPrincipal}">
-			<span th:text="${#request.userPrincipal.principal.username}"></span>
-			<a href="/logout">Logout</a>
-		</div>
-		<div th:unless="${#request.userPrincipal}">
-			<a href="/login">Login</a>
-		</div>
-	</header>
+    <header>
+        <div th:if="${#request.userPrincipal}">
+            <span th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
+			<span th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.username}"> </span>
+            <a href="/logout">Logout</a>
+        </div>
+        <div th:unless="${#request.userPrincipal}">
+            <a href="/login">Login</a>
+        </div>
+    </header>
 
-	<div>
-		<a href="/"><img src="/images/logo-siw.png" width="50%"/></a>
-	</div>
-	<h1>Login</h1>
-	<form th:action="@{/login}" method="POST">
-			<div>
-				<span>Username:</span>
-				<span><input name="username" type="text" required /></span>
-			</div>
-			<div>
-				<span>Password:</span>
-				<span><input name="password" type="password" required /></span>
-			</div>
-			<div>
-				<span th:if="${param.error != null}">Username o password errati</span>
-			</div>
-			<div>
-				<span><button type="submit">Login</button></span>
-			</div>
-	</form>
-	<div>
-		<a th:href="@{/register}" th:text="Registrati">Registrati</a>
-	</div>
+    <div>
+        <a href="/"><img src="/images/logo-siw.png" width="50%" /></a>
+    </div>
+    <h1>Login</h1>
+    <form th:action="@{/login}" method="POST">
+        <div>
+            <span>Username:</span>
+            <span><input name="username" type="text" required /></span>
+        </div>
+        <div>
+            <span>Password:</span>
+            <span><input name="password" type="password" required /></span>
+        </div>
+        <div>
+            <span th:if="${param.error != null}">Username o password errati</span>
+        </div>
+        <div>
+            <span><button type="submit">Login</button></span>
+        </div>
+    </form>
+    <div>
+        <a th:href="@{/register}" th:text="Registrati">Registrati</a>
+    </div>
+
+    <!-- Aggiungi i bottoni di accesso con OAuth2 -->
+    <div>
+        <a href="/oauth2/authorization/google">
+            <button type="button">Accedi con Google</button>
+        </a>
+    </div>
+    <div>
+        <a href="/oauth2/authorization/github">
+            <button type="button">Accedi con GitHub</button>
+        </a>
+    </div>
 </body>
 
 </html>
