--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -31,17 +31,9 @@
 			<a class="nav-link active" aria-current="page" href="/">Home</a>
 		  </li>
 		  
-		  <li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-			  FIlm
-			</a>
-			<ul class="dropdown-menu">
-			  <li><a class="dropdown-item" href="/movies">Tutti i Film</a></li>
-			  <li><hr class="dropdown-divider"></li>
-			  <li><a class="dropdown-item" href="#">Azione</a></li>
-			  <li><a class="dropdown-item" href="#">Horror</a></li>
-			</ul>
-		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="/movies">Film</a>
+		</li>
 		  <li class="nav-item">
 			<a class="nav-link" href="/artists" >Artisti</a>
 		  </li>
