--- a/src/main/resources/templates/admin/formUpdateMovie.html
+++ b/src/main/resources/templates/admin/formUpdateMovie.html
@@ -228,6 +228,9 @@
 		  
 		  
 	  </div>
+	  <div class="container my-5" th:unless="${!reviews.isEmpty()}">
+		<h1>Nessuna Recensione</h1>
+	  </div>
 	  
 	</div>
   </div>
