--- a/src/main/resources/templates/foundMovies.html
+++ b/src/main/resources/templates/foundMovies.html
@@ -72,7 +72,29 @@
 				  <h5 th:text="${movie.title}" class="card-title"></h5>
 				  <p th:text="${movie.year}" class="card-text"></p>
 				  <p th:text=" ${'Valutazione: '+movie.rating}" class="card-text">Valutazione: </p>
-				  <a th:href="@{|/movie/${movie.id}|}" class="btn btn-primary">Dettagli</a>
+				  <a th:unless="${isAdmin}" th:href="@{|/movie/${movie.id}|}" class="btn btn-primary">Dettagli</a>
+				  <a th:if="${isAdmin}" th:href="@{'/admin/formUpdateMovie' + '/' + ${movie.id}}" class="btn btn-primary">Aggiorna</a>
+				  <button th:if="${isAdmin}" type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#staticBackdrop-' + ${movie.id}">
+					Cancella
+				  </button>
+				</div>
+			  </div>
+			  <div th:if="${isAdmin}" class="modal fade " th:id="'staticBackdrop-' + ${movie.id}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+				<div class="modal-dialog">
+				  <div class="modal-content">
+					<div class="modal-header">
+					  <h1 class="modal-title fs-5" id="staticBackdropLabel">Conferma Operazione</h1>
+					  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+					  Sei sicuro di voler cancellare definitivamente questo film?
+					</div>
+					<div class="modal-footer">
+					 
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+					  <a th:href="@{'/admin/deleteMovie' + '/' + ${movie.id}}"><button type="button" class="btn btn-danger">Conferma</button></a>
+					</div>
+				  </div>
 				</div>
 			  </div>
 			</div>
@@ -81,28 +103,7 @@
 		  
 		  
 	  </div>	  
-	  <nav aria-label="Page navigation example">
-		<ul class="pagination justify-content-center">
-		  <li class="page-item">
-			<a th:if="${page == 1}"class="page-link disabled" href="#" aria-label="Previous">
-			  <span aria-hidden="true">&laquo;</span>
-			</a>
-			<a th:unless="${page == 1}"class="page-link" th:href="@{|/movies/${page-1}|}" aria-label="Previous">
-				<span aria-hidden="true">&laquo;</span>
-			  </a>
-		  </li>
-		  <li th:each="i : ${#numbers.sequence(0, pages-1)}" class="page-item"><a th:if="${page == i+1}" th:text="${i+1}" class="page-link active" th:href="@{|/movies/${i+1}|}"></a>
-			<a th:unless="${page == i+1}" th:text="${i+1}" class="page-link" th:href="@{|/movies/${i+1}|}"></a></li>
-		  <li class="page-item">
-			<a th:if="${page == pages}"class="page-link disabled" href="#" aria-label="Previous">
-				<span aria-hidden="true">&raquo;</span>
-			  </a>
-			  <a th:unless="${page == pages}"class="page-link" th:href="@{|/movies/${page+1}|}" aria-label="Next">
-				  <span aria-hidden="true">&raquo;</span>
-				</a>
-		  </li>
-		</ul>
-	  </nav>
+	  
 </body>
 
 </html>
