--- a/src/main/resources/templates/admin/actorsToAdd.html
+++ b/src/main/resources/templates/admin/actorsToAdd.html
@@ -1,43 +1,125 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 
 <head>
-	<title>Scelta attori</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+	<title>
+		SiwMovie - Film
+	</title>
+	
 </head>
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Film</title>
+	 <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<link rel="stylesheet" href="/css/stile2.css" />
+</head>
 <body>
-	<header>
-		<div th:if="${#request.userPrincipal}">
-			<span th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
-			<span th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.username}"> </span>
-			<a href="/logout">Logout</a>
-		</div>
-		<div th:unless="${#request.userPrincipal}">
-			<a href="/login">Login</a>
-		</div>
-	</header>
-	<div><a href="/"><img src="/images/logo-siw.png" width="50%"/></a></div>
-	<h1 th:text="'Attori del film ' + ${movie.title}"></h1>
-	<div th:if="${movie.actors.isEmpty()}">Non ci sono attori per questo film</div>
-	<ul>
-		<li th:each="actor : ${movie.actors}">
-			<span th:text="${actor.name}+' '+${actor.surname}"></span>
-			<a th:href="@{'/admin/removeActorFromMovie/'+ ${actor.id}+'/'+${movie.id}}">Cancella</a>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+ <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top"  >
+	
+	<div class="container-fluid" style="max-width: 1500px;">
+	  <a class="navbar-brand" href="/">SiwMovie</a>
+	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarScroll">
+		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+		  <li class="nav-item">
+			<a class="nav-link active" aria-current="page" href="/">Home</a>
+		  </li>
+		  
+		  <li class="nav-item">
+			<a class="nav-link" href="/movies">Film</a>
 		</li>
-	</ul>
-	<div>
-		Attori che si possono aggiungere:
-		<ul>
-			<li th:each="actor : ${actorsToAdd}">
-				<span th:text="${actor.name}+' '+${actor.surname}"></span>
-				<a th:href="@{'/admin/addActorToMovie/'+ ${actor.id}+'/'+${movie.id}}">Aggiungi</a>
+		  <li class="nav-item">
+			<a class="nav-link" href="/artists" >Artisti</a>
+		  </li>
+		  <li class="nav-item" th:if="${isAdmin}">
+			<a class="nav-link" href="/success">Pannello di controllo </a>
 			</li>
 		</ul>
-	<div>
-	<div>
-		<a th:href="@{'/admin/formUpdateMovie/'+ ${movie.id}}"><button type="button">Fine</button></a>
+		
+		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
+		  <input class="form-control me-2"  th:value="${year}"  name="year" type="search" placeholder="Cerca un film!" aria-label="Search">
+		  <button class="btn btn-outline-success" type="submit">Cerca</button>
+		</form>
+		<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+			<span>Ciao, </span>
+			<span th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
+			<span th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.username}"> </span>
+			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/logout">Logout</a></button>
+		</div>
+		<div th:unless="${#request.userPrincipal}">
+			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/login">Login</a></button>
+		</div>
+	  </div>
+	
 	</div>
+  </nav>
+
+  <div class="container my-5 py-5" >
+  	<div class="d-flex gap-3">
+		
+		<table class="table caption-top table-responsive">
+			<caption>Artisti nel film</caption>
+			<thead class="table-light">
+				<tr>
+				  <th scope="col"></th>
+				  <th scope="col">Nome</th>
+				  <th scope="col">Cognome</th>
+				  <th scope="col">Azione</th>
+				</tr>
+			  </thead>
+			  <tbody>
+				<tr th:each="actor: ${movie.actors}">
+					<td scope="row">
+						<div class="square-image rounded-circle">
+							<img th:if="${actor.image}"  th:src="${'/'+actor.image.imagePath}">
+						</div>
+					</td>
+				  <td scope="row" th:text="${actor.name}" >Mark</td>
+				  <td th:text="${actor.surname}" >Otto</td>
+				  <td> <a th:href="@{'/admin/removeActorFromMovie/'+ ${actor.id}+'/'+${movie.id}}">Rimuovi</a></td>
+				</tr>
+			  </tbody>
+		</table>
+		<table class="table caption-top table-responsive">
+			<caption>Artisti disponibili</caption>
+			<thead class="table-light">
+				<tr>
+					<th scope="col"></th>
+					<th scope="col">Nome</th>
+					<th scope="col">Cognome</th>
+					<th scope="col">Azione</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="actor: ${actorsToAdd}">
+					<td scope="row">
+						<div class="square-image rounded-circle">
+							<img th:if="${actor.image}" th:src="${'/'+actor.image.imagePath}">
+						</div>
+					</td>
+					<td scope="row" th:text="${actor.name}">Mark</td>
+					<td th:text="${actor.surname}">Otto</td>
+					<td>
+						<a th:href="@{'/admin/addActorToMovie/'+ ${actor.id}+'/'+${movie.id}}">Aggiungi</a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		
+		
+  	</div>
+ 
+  </div>	  
+	  
+  
+
 </body>
 
 </html>
