form registrazione completata

--- a/src/main/resources/templates/formRegisterUser.html
+++ b/src/main/resources/templates/formRegisterUser.html
@@ -67,7 +67,7 @@
   <div class="container my-5">
     <div class="card">
         <h2>Registrazione</h2>
-        <form th:action="@{/Register}" method="POST">
+        <form th:action="@{/register}" method="POST">
             <div>
 				<label>Username</label>
                 <span>
