--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -61,7 +61,7 @@
   </nav>
 
   <div class="container my-5">
-	<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png" style=""/></div>
+	<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png"/></div>
 	
 	<div th:if="${!movies.isEmpty()}" class="container my-3">
 		<div class="row">
