Commit finale e rifiniture

--- a/src/main/resources/static/css/loginstyle.css
+++ b/src/main/resources/static/css/loginstyle.css
@@ -37,6 +37,7 @@ body {
 }
 
 .card input[type="text"],
+.card input[type="email"],
 .card input[type="password"] {
     width: 100%;
     padding: 10px;
