--- a/src/main/resources/templates/Reviews.html
+++ b/src/main/resources/templates/Reviews.html
@@ -10,127 +10,153 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Recensioni</title>
-	 <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<head>
+	<title>Recensioni</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
+
 <body>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
- <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top"  >
-	
-	<div class="container-fluid" style="max-width: 1500px;">
-	  <a class="navbar-brand" href="/">SiwMovie</a>
-	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarScroll">
-		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-		  <li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="/">Home</a>
-		  </li>
-		  
-		  <li class="nav-item">
-			<a class="nav-link" href="/movies">Film</a>
-		</li>
-		  <li class="nav-item">
-			<a class="nav-link" href="/artists" >Artisti</a>
-		  </li>
-		  <li class="nav-item" th:if="${isAdmin}">
-			<a class="nav-link" href="/success">Pannello di controllo </a>
-			</li>
-		</ul>
-		
-		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
-		  <input class="form-control me-2"  th:value="${year}"  name="year" type="search" placeholder="Cerca un film!" aria-label="Search">
-		  <button class="btn btn-outline-success" type="submit">Cerca</button>
-		</form>
-		<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
-			<span>Ciao, </span>
-			<span th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
-			<span th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.username}"> </span>
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/logout">Logout</a></button>
-		</div>
-		<div th:unless="${#request.userPrincipal}">
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/login">Login</a></button>
-		</div>
-	  </div>
-	
-	</div>
-  </nav>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+		crossorigin="anonymous"></script>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
 
-  
+		<div class="container-fluid" style="max-width: 1500px;">
+			<a class="navbar-brand" href="/">SiwMovie</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+				aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarScroll">
+				<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/">Home</a>
+					</li>
 
-  <div th:if="${movie}"  id="movie-container" style="padding-top: 2em;">
-	<div id="blurred" th:if="${movie.primaryImage}" th:style="'background-image: url(/'+${movie.primaryImage.imagePath}+');'" ></div>
-	<div id="black-blurred"></div>
-	<div class="container my-5" id="movie">
-	  
-	  
-	
-	  
-		<a class="btn btn-primary" th:if="${isAdmin}" th:href="@{|/admin/formUpdateMovie/${movie.id}|}">Torna Al Film</a>
-		<a class="btn btn-primary" th:unless="${isAdmin}" th:href="@{|/movie/${movie.id}|}">Torna Al film</a>
-		<div class="container my-5" th:unless="${!reviews.isEmpty()}"  >
-			<h2 class="text-center" >Nessuna Recensione</h2>
-		</div>
-	  <div class="container my-5" th:if="${!reviews.isEmpty()}"  >
-		<h2 class="text-success" th:if="${operation}" th:text="${operation}"></h2>
-		<h1 class="text-center" th:text="${movie.title+' - Recensioni'}"style="margin-bottom: 1em;">Le ultime recensioni</h1>
-		
-		
-		  
-		  
-		  
-		  <div class="row row-cols-1 row-cols-md-2 g-4">
-			<div class="card mb-3 text-bg-secondary border-primary" th:each="review, reviewStat : ${reviews}" style="max-width: 540px;">
-				<div class="row g-0" >
+					<li class="nav-item">
+						<a class="nav-link" href="/movies">Film</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/artists">Artisti</a>
+					</li>
+					<li class="nav-item" th:if="${isAdmin}">
+						<a class="nav-link" href="/success">Pannello di controllo </a>
+					</li>
+				</ul>
 
-					<div class="card-body">
-					  <h5 class="card-text" th:text="${review.user.name+' '+review.user.surname}">Mario rossi</h5>
-					  <h5 class="card-title" th:text="${review.title}">Bel film</h5>
-					  <p class="card-text" th:text="${review.reviewDescription}" >ottime scene</p>
-					  <h5 th:text="' '+${review.rating}" class="fa fa-star checked"  >5</h5><br>
-					  <a th:if="${isAdmin}" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#staticBackdrop-' + ${review.id}">
-						Cancella
-					  </a>
-					
-				  </div>
+				<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"
+					style="margin-right: 100px; ">
+					<input class="form-control me-2" th:value="${year}" name="year" type="search"
+						placeholder="Cerca un film!" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Cerca</button>
+				</form>
+				<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+					<span>Ciao, </span>
+					<span
+						th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
+					<span
+						th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.username}"> </span>
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/logout">Logout</a></button>
 				</div>
-				<div class="modal fade " th:if="${isAdmin}" th:id="'staticBackdrop-' + ${review.id}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-					<div class="modal-dialog">
-					  <div class="modal-content">
-						<div class="modal-header">
-						  <h1 class="modal-title fs-5" id="staticBackdropLabel">Conferma Operazione</h1>
-						  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				<div th:unless="${#request.userPrincipal}">
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/login">Login</a></button>
+				</div>
+			</div>
+
+		</div>
+	</nav>
+
+
+
+	<div th:if="${movie}" id="movie-container" style="padding-top: 2em;">
+		<div id="blurred" th:if="${movie.primaryImage}"
+			th:style="'background-image: url(/'+${movie.primaryImage.imagePath}+');'"></div>
+		<div id="black-blurred"></div>
+		<div class="container my-5" id="movie">
+
+
+
+
+			<a class="btn btn-primary" th:if="${isAdmin}" th:href="@{|/admin/formUpdateMovie/${movie.id}|}">Torna Al
+				Film</a>
+			<a class="btn btn-primary" th:unless="${isAdmin}" th:href="@{|/movie/${movie.id}|}">Torna Al film</a>
+			<div class="container my-5" th:unless="${!reviews.isEmpty()}">
+				<h2 class="text-center">Nessuna Recensione</h2>
+			</div>
+			<div class="container my-5" th:if="${!reviews.isEmpty()}">
+				<h2 class="text-success" th:if="${operation}" th:text="${operation}"></h2>
+				<h1 class="text-center" th:text="${movie.title+' - Recensioni'}" style="margin-bottom: 1em;">Le ultime
+					recensioni</h1>
+
+
+
+
+
+				<div class="row row-cols-1 row-cols-md-2 g-4">
+					<div class="card mb-3 text-bg-secondary border-primary" th:each="review, reviewStat : ${reviews}"
+						style="max-width: 540px;">
+						<div class="row g-0">
+
+							<div class="card-body">
+								<h5 class="card-text" th:text="${review.user.name+' '+review.user.surname}">Mario rossi
+								</h5>
+								<h5 class="card-title" th:text="${review.title}">Bel film</h5>
+								<p class="card-text" th:text="${review.reviewDescription}">ottime scene</p>
+								<h5 th:text="' '+${review.rating}" class="fa fa-star checked">5</h5><br>
+								<a th:if="${isAdmin}" class="btn btn-danger" data-bs-toggle="modal"
+									th:data-bs-target="'#staticBackdrop-' + ${review.id}">
+									Cancella
+								</a>
+
+							</div>
 						</div>
-						<div class="modal-body">
-						  Sei sicuro di voler cancellare definitivamente questa recensione?
+						<div class="modal fade " th:if="${isAdmin}" th:id="'staticBackdrop-' + ${review.id}"
+							data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+							aria-labelledby="staticBackdropLabel" aria-hidden="true">
+							<div class="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h1 class="modal-title fs-5" id="staticBackdropLabel">Conferma Operazione</h1>
+										<button type="button" class="btn-close" data-bs-dismiss="modal"
+											aria-label="Close"></button>
+									</div>
+									<div class="modal-body">
+										Sei sicuro di voler cancellare definitivamente questa recensione?
+									</div>
+									<div class="modal-footer">
+
+										<button type="button" class="btn btn-secondary"
+											data-bs-dismiss="modal">Annulla</button>
+										<a th:href="@{'/admin/deleteReview' + '/' + ${review.id}+'/' + ${movie.id}}"><button
+												type="button" class="btn btn-danger">Conferma</button></a>
+									</div>
+								</div>
+							</div>
 						</div>
-						<div class="modal-footer">
-						 
-							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-						  <a th:href="@{'/admin/deleteReview' + '/' + ${review.id}+'/' + ${movie.id}}"><button type="button" class="btn btn-danger">Conferma</button></a>
-						</div>
-					  </div>
 					</div>
-				  </div>
-			  </div>
-		  </div>
-		  
-		  
-		  
-		  
-	  </div>
-	  
+				</div>
+
+
+
+
+			</div>
+
+		</div>
 	</div>
-  </div>
 
- 
-  
 
-    
-  </body>
+
+
+
+</body>
+
 </html>
