--- a/src/main/resources/templates/artist.html
+++ b/src/main/resources/templates/artist.html
@@ -10,140 +10,162 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Film</title>
-	 <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-</head>
-<body>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
- <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top"  >
-	
-	<div class="container-fluid" style="max-width: 1500px;">
-	  <a class="navbar-brand" href="/">SiwMovie</a>
-	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarScroll">
-		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-		  <li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="/">Home</a>
-		  </li>
-		  
-		  <li class="nav-item">
-			<a class="nav-link" href="/movies">Film</a>
-		</li>
-		  <li class="nav-item">
-			<a class="nav-link" href="/artists" >Artisti</a>
-		  </li>
-		  <li class="nav-item" th:if="${isAdmin}">
-			<a class="nav-link" href="/success">Pannello di controllo </a>
-			</li>
-		</ul>
-		
-		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
-		  <input class="form-control me-2"  th:value="${year}"  name="year" type="search" placeholder="Cerca un film!" aria-label="Search">
-		  <button class="btn btn-outline-success" type="submit">Cerca</button>
-		</form>
-		<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
-			<span>Ciao, </span>
-			<span th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
-			<span th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.username}"> </span>
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/logout">Logout</a></button>
-		</div>
-		<div th:unless="${#request.userPrincipal}">
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/login">Login</a></button>
-		</div>
-	  </div>
-	
-	</div>
-  </nav>
- 
-  <div th:if="${artist}"  id="movie-container" style="padding-top: 2em;">
-	<div th:if="${artist.image}" id="blurred" th:style="'background-image: url(/'+${artist.image.imagePath}+');'" ></div>
-	<div id="black-blurred"></div>
-	<div class="container my-5" id="movie">
-	  <h1 th:text="${artist.name}">Christopher</h1>
-	  <h2 th:text="${artist.surname}">Nolan</h2>
-	  <h3 th:text="'Data di nascita: '+${artist.dateOfBirth}">05/12/1980</h3>
-	  <h3 th:if="${artist.dateOfDeath}" th:text="'Data di morte: '+${artist.dateOfDeath}">01/05/1999</h3>
-	  <div class="d-flex p-2">
-		<img th:if="${artist.image}" class="img-fluid flex-item" id="movie-image" th:src="${'/'+artist.image.imagePath} "style="margin-left:0px; margin-right: 0px;">
-	  <div style="padding-left: 2%;">
-		<h1>Bio</h1>
-		<p class="lead " th:text="${artist.biography}"></p>
-	  </div>
-		
-		  
 
-	  </div>
-	
-	  <div class="container">
-			<div class="container">
-				<h1 th:if="${!topDirectorMovies.isEmpty()}">Principali Opere da Regista</h1>
-				<h1 th:unless="${!topDirectorMovies.isEmpty()}">Nessun Opera da Regista</h1>
-			</div>
-			<div th:if="${!topDirectorMovies.isEmpty()}" class="container my-3">
-				<div class="card-group">
-				<div th:each="movie, movieStat : ${topDirectorMovies}" class="card mb-3" style="max-width: 540px;">
-					<div class="row g-0">
-					  <div class="col-md-4">
-						<a th:href="@{|/movie/${movie.id}|}" class="link">
-							<img th:src="${'\'+movie.primaryImage.imagePath}" class="img-fluid rounded-start" alt="...">
-						</a>
-					  </div>
-					  <div class="col-md-8">
-						<div class="card-body">
-							<a th:href="@{|/movie/${movie.id}|}" class="link">
-						  <h5 th:text="${movie.title}" class="card-title">Titolo Film</h5></a>
-						  <p th:text="${movie.year}" class="card-text">1980</p>
-							<span th:text="' '+${movie.rating}"class="fa fa-star checked"></span>
-						  
-						</div>
-					  </div>
-					</div>
-				  </div>
-				  
+<head>
+	<title>Film</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+</head>
+
+<body>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+		crossorigin="anonymous"></script>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+
+		<div class="container-fluid" style="max-width: 1500px;">
+			<a class="navbar-brand" href="/">SiwMovie</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+				aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarScroll">
+				<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/">Home</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link" href="/movies">Film</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/artists">Artisti</a>
+					</li>
+					<li class="nav-item" th:if="${isAdmin}">
+						<a class="nav-link" href="/success">Pannello di controllo </a>
+					</li>
+				</ul>
+
+				<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"
+					style="margin-right: 100px; ">
+					<input class="form-control me-2" th:value="${year}" name="year" type="search"
+						placeholder="Cerca un film!" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Cerca</button>
+				</form>
+				<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+					<span>Ciao, </span>
+					<span
+						th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
+					<span
+						th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.username}"> </span>
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/logout">Logout</a></button>
 				</div>
-				  
-			  </div>
-			  
-  </div>
-  <div class="container">
-	<div class="container">
-		<h1 th:if="${!topActorMovies.isEmpty()}" >Principali Opere da Attore</h1>
-		<h1 th:unless="${!topActorMovies.isEmpty()}" >Nessun Opera da Attore</h1>
-	</div>
-	<div th:if="${!topActorMovies.isEmpty()}" class="container my-3">
-		<div class="card-group">
-		<div th:each="movie, movieStat : ${topActorMovies}" class="card mb-3" style="max-width: 540px;">
-			<div class="row g-0">
-			  <div class="col-md-4">
-				<a th:href="@{|/movie/${movie.id}|}" class="link">
-					<img th:src="${'\'+movie.primaryImage.imagePath}" class="img-fluid rounded-start" alt="...">
-				</a>
-			  </div>
-			  <div class="col-md-8">
-				<div class="card-body">
-					<a th:href="@{|/movie/${movie.id}|}" class="link">
-				  <h5 th:text="${movie.title}" class="card-title">Titolo Film</h5></a>
-				  <p th:text="${movie.year}" class="card-text">1980</p>
-					<span th:text="' '+${movie.rating}"class="fa fa-star checked"></span>
-				  
+				<div th:unless="${#request.userPrincipal}">
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/login">Login</a></button>
 				</div>
-			  </div>
 			</div>
-		  </div>
-		  
+
 		</div>
-		  
-	  </div>
-	  
-</div>
-</div>
-</div>
-    
-  </body>
+	</nav>
+
+	<div th:if="${artist}" id="movie-container" style="padding-top: 2em;">
+		<div th:if="${artist.image}" id="blurred" th:style="'background-image: url(/'+${artist.image.imagePath}+');'">
+		</div>
+		<div id="black-blurred"></div>
+		<div class="container my-5" id="movie">
+			<h1 th:text="${artist.name}">Christopher</h1>
+			<h2 th:text="${artist.surname}">Nolan</h2>
+			<h3 th:text="'Data di nascita: '+${artist.dateOfBirth}">05/12/1980</h3>
+			<h3 th:if="${artist.dateOfDeath}" th:text="'Data di morte: '+${artist.dateOfDeath}">01/05/1999</h3>
+			<div class="d-flex p-2">
+				<img th:if="${artist.image}" class="img-fluid flex-item" id="movie-image"
+					th:src="${'/'+artist.image.imagePath} " style="margin-left:0px; margin-right: 0px;">
+				<div style="padding-left: 2%;">
+					<h1>Bio</h1>
+					<p class="lead " th:text="${artist.biography}"></p>
+				</div>
+
+
+
+			</div>
+
+			<div class="container">
+				<div class="container">
+					<h1 th:if="${!topDirectorMovies.isEmpty()}">Principali Opere da Regista</h1>
+					<h1 th:unless="${!topDirectorMovies.isEmpty()}">Nessun Opera da Regista</h1>
+				</div>
+				<div th:if="${!topDirectorMovies.isEmpty()}" class="container my-3">
+					<div class="card-group">
+						<div th:each="movie, movieStat : ${topDirectorMovies}" class="card mb-3"
+							style="max-width: 540px;">
+							<div class="row g-0">
+								<div class="col-md-4">
+									<a th:href="@{|/movie/${movie.id}|}" class="link">
+										<img th:src="${'\'+movie.primaryImage.imagePath}"
+											class="img-fluid rounded-start" alt="...">
+									</a>
+								</div>
+								<div class="col-md-8">
+									<div class="card-body">
+										<a th:href="@{|/movie/${movie.id}|}" class="link">
+											<h5 th:text="${movie.title}" class="card-title">Titolo Film</h5>
+										</a>
+										<p th:text="${movie.year}" class="card-text">1980</p>
+										<span th:text="' '+${movie.rating}" class="fa fa-star checked"></span>
+
+									</div>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+			<div class="container">
+				<div class="container">
+					<h1 th:if="${!topActorMovies.isEmpty()}">Principali Opere da Attore</h1>
+					<h1 th:unless="${!topActorMovies.isEmpty()}">Nessun Opera da Attore</h1>
+				</div>
+				<div th:if="${!topActorMovies.isEmpty()}" class="container my-3">
+					<div class="card-group">
+						<div th:each="movie, movieStat : ${topActorMovies}" class="card mb-3" style="max-width: 540px;">
+							<div class="row g-0">
+								<div class="col-md-4">
+									<a th:href="@{|/movie/${movie.id}|}" class="link">
+										<img th:src="${'\'+movie.primaryImage.imagePath}"
+											class="img-fluid rounded-start" alt="...">
+									</a>
+								</div>
+								<div class="col-md-8">
+									<div class="card-body">
+										<a th:href="@{|/movie/${movie.id}|}" class="link">
+											<h5 th:text="${movie.title}" class="card-title">Titolo Film</h5>
+										</a>
+										<p th:text="${movie.year}" class="card-text">1980</p>
+										<span th:text="' '+${movie.rating}" class="fa fa-star checked"></span>
+
+									</div>
+								</div>
+							</div>
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+	</div>
+
+</body>
+
 </html>
