--- a/src/main/resources/templates/artists.html
+++ b/src/main/resources/templates/artists.html
@@ -5,112 +5,132 @@
 	<title>
 		SiwMovie - Film
 	</title>
-	
+
 </head>
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Film</title>
-	 <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+<head>
+	<title>Film</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/stile2.css" />
 </head>
-<body>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
- <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top"  >
-	
-	<div class="container-fluid" style="max-width: 1500px;">
-	  <a class="navbar-brand" href="/">SiwMovie</a>
-	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarScroll">
-		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-		  <li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="/">Home</a>
-		  </li>
-		  
-		  <li class="nav-item">
-			<a class="nav-link" href="/movies">Film</a>
-		</li>
-		  <li class="nav-item">
-			<a class="nav-link" href="/artists" >Artisti</a>
-		  </li>
-		  <li class="nav-item" th:if="${isAdmin}">
-			<a class="nav-link" href="/success">Pannello di controllo </a>
-			</li>
-		</ul>
-		
-		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
-		  <input class="form-control me-2"  th:value="${year}"  name="year" type="search" placeholder="Cerca un film!" aria-label="Search">
-		  <button class="btn btn-outline-success" type="submit">Cerca</button>
-		</form>
-		<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
-			<span>Ciao, </span>
-			<span th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
-			<span th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.username}"> </span>
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/logout">Logout</a></button>
-		</div>
-		<div th:unless="${#request.userPrincipal}">
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/login">Login</a></button>
-		</div>
-	  </div>
-	
-	</div>
-  </nav>
 
-  <div class="container my-5" th:if="${!artists.isEmpty()}"  >
-	<h1 class="text-center" style="margin-bottom: 1em;">Artisti</h1>
-	
-	
-	  
-	  
-	  
-	  <div class="row row-cols-1 row-cols-md-2 g-4">
-		<div class="card mb-3 text-bg-secondary border-primary" th:each="artist, artistStat : ${artists}" style="max-width: 540px;">
-			<div class="row g-0" >
-			  <div class="col-md-4" id="img-container">
-				<img th:if="${artist.image}" id="artist-card" th:src="${'\'+artist.image.imagePath}" class="img-fluid rounded-circle"  alt="...">
-			  </div>
-			  
-			  <div class="col-md-8">
-				<div class="card-body">
-				  <h5 class="card-title" th:text="${artist.name +' '+ artist.surname}">Nome artista</h5>
-				  <p class="card-text" th:text="${artist.biography}" >Bio</p>
-				  <a th:href="@{|/artist/${artist.id}|}" class="btn btn-primary">Dettagli</a>
+<body>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+		crossorigin="anonymous"></script>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+
+		<div class="container-fluid" style="max-width: 1500px;">
+			<a class="navbar-brand" href="/">SiwMovie</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+				aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarScroll">
+				<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/">Home</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link" href="/movies">Film</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/artists">Artisti</a>
+					</li>
+					<li class="nav-item" th:if="${isAdmin}">
+						<a class="nav-link" href="/success">Pannello di controllo </a>
+					</li>
+				</ul>
+
+				<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"
+					style="margin-right: 100px; ">
+					<input class="form-control me-2" th:value="${year}" name="year" type="search"
+						placeholder="Cerca un film!" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Cerca</button>
+				</form>
+				<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+					<span>Ciao, </span>
+					<span
+						th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
+					<span
+						th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.username}"> </span>
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/logout">Logout</a></button>
 				</div>
-			  </div>
+				<div th:unless="${#request.userPrincipal}">
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/login">Login</a></button>
+				</div>
 			</div>
-		  </div>
-	  </div>
-	  
-	  
-	  
-	  <nav aria-label="Page navigation example">
-		<ul class="pagination justify-content-center">
-		  <li class="page-item">
-			<a th:if="${page == 1}"class="page-link disabled" href="#" aria-label="Previous">
-			  <span aria-hidden="true">&laquo;</span>
-			</a>
-			<a th:unless="${page == 1}"class="page-link" th:href="@{|/artists/${page-1}|}" aria-label="Previous">
-				<span aria-hidden="true">&laquo;</span>
-			  </a>
-		  </li>
-		  <li th:each="i : ${#numbers.sequence(0, pages-1)}" class="page-item"><a th:if="${page == i+1}" th:text="${i+1}" class="page-link active" th:href="@{|/artists/${i+1}|}"></a>
-			<a th:unless="${page == i+1}" th:text="${i+1}" class="page-link" th:href="@{|/artists/${i+1}|}"></a></li>
-		  <li class="page-item">
-			<a th:if="${page == pages}"class="page-link disabled" href="#" aria-label="Previous">
-				<span aria-hidden="true">&raquo;</span>
-			  </a>
-			  <a th:unless="${page == pages}"class="page-link" th:href="@{|/artists/${page+1}|}" aria-label="Next">
-				  <span aria-hidden="true">&raquo;</span>
-				</a>
-		  </li>
-		</ul>
-	  </nav> 
-  </div>
+
+		</div>
+	</nav>
+
+	<div class="container my-5" th:if="${!artists.isEmpty()}">
+		<h1 class="text-center" style="margin-bottom: 1em;">Artisti</h1>
+
+
+
+
+
+		<div class="row row-cols-1 row-cols-md-2 g-4">
+			<div class="card mb-3 text-bg-secondary border-primary" th:each="artist, artistStat : ${artists}"
+				style="max-width: 540px;">
+				<div class="row g-0">
+					<div class="col-md-4" id="img-container">
+						<img th:if="${artist.image}" id="artist-card" th:src="${'\'+artist.image.imagePath}"
+							class="img-fluid rounded-circle" alt="...">
+					</div>
+
+					<div class="col-md-8">
+						<div class="card-body">
+							<h5 class="card-title" th:text="${artist.name +' '+ artist.surname}">Nome artista</h5>
+							<p class="card-text" th:text="${artist.biography}">Bio</p>
+							<a th:href="@{|/artist/${artist.id}|}" class="btn btn-primary">Dettagli</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+		<nav aria-label="Page navigation example">
+			<ul class="pagination justify-content-center">
+				<li class="page-item">
+					<a th:if="${page == 1}" class="page-link disabled" href="#" aria-label="Previous">
+						<span aria-hidden="true">&laquo;</span>
+					</a>
+					<a th:unless="${page == 1}" class="page-link" th:href="@{|/artists/${page-1}|}"
+						aria-label="Previous">
+						<span aria-hidden="true">&laquo;</span>
+					</a>
+				</li>
+				<li th:each="i : ${#numbers.sequence(0, pages-1)}" class="page-item"><a th:if="${page == i+1}"
+						th:text="${i+1}" class="page-link active" th:href="@{|/artists/${i+1}|}"></a>
+					<a th:unless="${page == i+1}" th:text="${i+1}" class="page-link" th:href="@{|/artists/${i+1}|}"></a>
+				</li>
+				<li class="page-item">
+					<a th:if="${page == pages}" class="page-link disabled" href="#" aria-label="Previous">
+						<span aria-hidden="true">&raquo;</span>
+					</a>
+					<a th:unless="${page == pages}" class="page-link" th:href="@{|/artists/${page+1}|}"
+						aria-label="Next">
+						<span aria-hidden="true">&raquo;</span>
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
 
 </body>
 
