--- a/src/main/resources/templates/formLogin.html
+++ b/src/main/resources/templates/formLogin.html
@@ -5,104 +5,118 @@
 	<title>
 		SiwMovie - Homepage
 	</title>
-	
-    
+
+
 </head>
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Film</title>
-	 <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="/css/loginstyle.css" rel="stylesheet">
+
+<head>
+	<title>Film</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<link href="/css/loginstyle.css" rel="stylesheet">
 </head>
 
 <body>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
- <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" >
-	
-	<div class="container-fluid" style="max-width: 1500px;">
-	  <a class="navbar-brand" href="/">SiwMovie</a>
-	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarScroll">
-		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-		  <li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="/">Home</a>
-		  </li>
-		  
-		  <li class="nav-item">
-			<a class="nav-link" href="/movies">Film</a>
-		</li>
-		  
-		  <li class="nav-item" >
-			<a class="nav-link" href="/artists" >Artisti</a>
-		  </li>
-		  <li class="nav-item" th:if="${isAdmin}">
-			<a class="nav-link" href="/success">Pannello di controllo </a>
-			</li>	
-		</ul>
-		
-		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
-		  <input class="form-control me-2"  th:value="${year}"  name="year" type="search" placeholder="Cerca un film!" aria-label="Search">
-		  <button class="btn btn-outline-success" type="submit">Cerca</button>
-		</form>
-		<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
-			<span>Ciao, </span>
-			<span th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
-			<span th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.username}"> </span>
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/logout">Logout</a></button>
-		</div>
-		<div th:unless="${#request.userPrincipal}">
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/login">Login</a></button>
-		</div>
-	  </div>
-	
-	</div>
-  </nav>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+		crossorigin="anonymous"></script>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
 
-  <div class="position-absolute top-0 start-50 translate-middle" style="margin-top: 10%;">
-	<h2 class="text-success" th:if="${operation}" th:text="${operation}" ></h2>
-</div>
-  <div class="container my-5">
-    <div class="card">
-        <h2>Login</h2>
-		
-        <form th:action="@{/login}" method="POST">
-            <div>
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username">
-            </div>
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password">
-            </div>
-            <div>
-                <span class = "error-message" th:if="${param.error != null}">Username o password errati</span>
-            </div>
-            <div>
-                <button class="btn" type="submit">Login</button>
-            </div>
-            <div class="divider">Oppure</div>
-            
-        </form>
-        <div class="register-link">
-            <a th:href="@{/register}">Registrati</a>
-        </div>
-        <div>
-            <a href="/oauth2/authorization/google">
-                <button class="btn">
-                    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google Logo" class="google-logo">
-                    Accedi con Google
-                </button>
-            </a>
-        </div>
-    </div>
-</div>
-	  
+		<div class="container-fluid" style="max-width: 1500px;">
+			<a class="navbar-brand" href="/">SiwMovie</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+				aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarScroll">
+				<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/">Home</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link" href="/movies">Film</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link" href="/artists">Artisti</a>
+					</li>
+					<li class="nav-item" th:if="${isAdmin}">
+						<a class="nav-link" href="/success">Pannello di controllo </a>
+					</li>
+				</ul>
+
+				<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"
+					style="margin-right: 100px; ">
+					<input class="form-control me-2" th:value="${year}" name="year" type="search"
+						placeholder="Cerca un film!" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Cerca</button>
+				</form>
+				<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+					<span>Ciao, </span>
+					<span
+						th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
+					<span
+						th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.username}"> </span>
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/logout">Logout</a></button>
+				</div>
+				<div th:unless="${#request.userPrincipal}">
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/login">Login</a></button>
+				</div>
+			</div>
+
+		</div>
+	</nav>
+
+	<div class="position-absolute top-0 start-50 translate-middle" style="margin-top: 10%;">
+		<h2 class="text-success" th:if="${operation}" th:text="${operation}"></h2>
+	</div>
+	<div class="container my-5">
+		<div class="card">
+			<h2>Login</h2>
+
+			<form th:action="@{/login}" method="POST">
+				<div>
+					<label for="username">Username:</label>
+					<input type="text" id="username" name="username">
+				</div>
+				<div>
+					<label for="password">Password:</label>
+					<input type="password" id="password" name="password">
+				</div>
+				<div>
+					<span class="error-message" th:if="${param.error != null}">Username o password errati</span>
+				</div>
+				<div>
+					<button class="btn" type="submit">Login</button>
+				</div>
+				<div class="divider">Oppure</div>
+
+			</form>
+			<div class="register-link">
+				<a th:href="@{/register}">Registrati</a>
+			</div>
+			<div>
+				<a href="/oauth2/authorization/google">
+					<button class="btn">
+						<img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google Logo"
+							class="google-logo">
+						Accedi con Google
+					</button>
+				</a>
+			</div>
+		</div>
+	</div>
+
 </body>
 
 </html>
