--- a/src/main/resources/templates/formSearchMovies.html
+++ b/src/main/resources/templates/formSearchMovies.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Cerca Film</title>
 	<link rel="stylesheet" href="/css/stile.css" />
@@ -8,8 +9,12 @@
 <body>
 	<header>
 		<div th:if="${#request.userPrincipal}">
-			<span th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
-			<span th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.username}"> </span>
+			<span
+				th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+				th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
+			<span
+				th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+				th:text="${#request.userPrincipal.principal.username}"> </span>
 			<a href="/logout">Logout</a>
 		</div>
 		<div th:unless="${#request.userPrincipal}">
@@ -17,7 +22,7 @@
 		</div>
 	</header>
 
-	<div><a href="/"><img src="/images/logo-siw.png" width="50%"/></a></div>
+	<div><a href="/"><img src="/images/logo-siw.png" width="50%" /></a></div>
 	<h1>Cerca film per anno</h1>
 	<form th:action="@{/searchMovies}" method="post">
 		<div>Anno: <input type="text" th:value="${year}" name="year" />
