--- a/src/main/resources/templates/foundMovies.html
+++ b/src/main/resources/templates/foundMovies.html
@@ -10,100 +10,123 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Film</title>
-	 <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-</head>
-<body>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
- <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top"  >
-	
-	<div class="container-fluid" style="max-width: 1500px;">
-	  <a class="navbar-brand" href="/">SiwMovie</a>
-	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarScroll">
-		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-		  <li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="/">Home</a>
-		  </li>
-		  
-		  <li class="nav-item">
-			<a class="nav-link" href="/movies">Film</a>
-		</li>
-		  <li class="nav-item">
-			<a class="nav-link" href="/artists" >Artisti</a>
-		  </li>
-		  <li class="nav-item" th:if="${isAdmin}">
-			<a class="nav-link" href="/success">Pannello di controllo </a>
-			</li>
-		</ul>
-		
-		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
-		  <input class="form-control me-2"  th:value="${year}"  name="year" type="search" placeholder="Cerca un film!" aria-label="Search">
-		  <button class="btn btn-outline-success" type="submit">Cerca</button>
-		</form>
-		<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
-			<span>Ciao, </span>
-			<span th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
-			<span th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.username}"> </span>
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/logout">Logout</a></button>
-		</div>
-		<div th:unless="${#request.userPrincipal}">
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/login">Login</a></button>
-		</div>
-	  </div>
-	
-	</div>
-  </nav>
 
-  <div class="container my-5">
-	<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png" /></div>
-	
-	<div th:if="${!movies.isEmpty()}" class="container my-3">
-		<div class="row">
-			<div th:each="movie, movieStat : ${movies}" class="col-md-4 col-sm-6">
-			  <div class="card mb-3" style="max-width: 80%;">
-				<img th:src="${'\'+movie.primaryImage.imagePath}" class="card-img-top " id="moviecard" alt="Movie Poster">
-				<div class="card-body">
-				  <h5 th:text="${movie.title}" class="card-title"></h5>
-				  <p th:text="${movie.year}" class="card-text"></p>
-				  <p th:text=" ${'Valutazione: '+movie.rating}" class="card-text">Valutazione: </p>
-				  <a th:unless="${isAdmin}" th:href="@{|/movie/${movie.id}|}" class="btn btn-primary">Dettagli</a>
-				  <a th:if="${isAdmin}" th:href="@{'/admin/formUpdateMovie' + '/' + ${movie.id}}" class="btn btn-primary">Aggiorna</a>
-				  <button th:if="${isAdmin}" type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#staticBackdrop-' + ${movie.id}">
-					Cancella
-				  </button>
+<head>
+	<title>Film</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+</head>
+
+<body>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+		crossorigin="anonymous"></script>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+
+		<div class="container-fluid" style="max-width: 1500px;">
+			<a class="navbar-brand" href="/">SiwMovie</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+				aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarScroll">
+				<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/">Home</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link" href="/movies">Film</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/artists">Artisti</a>
+					</li>
+					<li class="nav-item" th:if="${isAdmin}">
+						<a class="nav-link" href="/success">Pannello di controllo </a>
+					</li>
+				</ul>
+
+				<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"
+					style="margin-right: 100px; ">
+					<input class="form-control me-2" th:value="${year}" name="year" type="search"
+						placeholder="Cerca un film!" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Cerca</button>
+				</form>
+				<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+					<span>Ciao, </span>
+					<span
+						th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
+					<span
+						th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.username}"> </span>
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/logout">Logout</a></button>
 				</div>
-			  </div>
-			  <div th:if="${isAdmin}" class="modal fade " th:id="'staticBackdrop-' + ${movie.id}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-				<div class="modal-dialog">
-				  <div class="modal-content">
-					<div class="modal-header">
-					  <h1 class="modal-title fs-5" id="staticBackdropLabel">Conferma Operazione</h1>
-					  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-					</div>
-					<div class="modal-body">
-					  Sei sicuro di voler cancellare definitivamente questo film?
-					</div>
-					<div class="modal-footer">
-					 
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-					  <a th:href="@{'/admin/deleteMovie' + '/' + ${movie.id}}"><button type="button" class="btn btn-danger">Conferma</button></a>
-					</div>
-				  </div>
+				<div th:unless="${#request.userPrincipal}">
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/login">Login</a></button>
 				</div>
-			  </div>
 			</div>
-		  </div>
-		  
-		  
-		  
-	  </div>	  
-	  
+
+		</div>
+	</nav>
+
+	<div class="container my-5">
+		<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png" /></div>
+
+		<div th:if="${!movies.isEmpty()}" class="container my-3">
+			<div class="row">
+				<div th:each="movie, movieStat : ${movies}" class="col-md-4 col-sm-6">
+					<div class="card mb-3" style="max-width: 80%;">
+						<img th:src="${'\'+movie.primaryImage.imagePath}" class="card-img-top " id="moviecard"
+							alt="Movie Poster">
+						<div class="card-body">
+							<h5 th:text="${movie.title}" class="card-title"></h5>
+							<p th:text="${movie.year}" class="card-text"></p>
+							<p th:text=" ${'Valutazione: '+movie.rating}" class="card-text">Valutazione: </p>
+							<a th:unless="${isAdmin}" th:href="@{|/movie/${movie.id}|}"
+								class="btn btn-primary">Dettagli</a>
+							<a th:if="${isAdmin}" th:href="@{'/admin/formUpdateMovie' + '/' + ${movie.id}}"
+								class="btn btn-primary">Aggiorna</a>
+							<button th:if="${isAdmin}" type="button" class="btn btn-danger" data-bs-toggle="modal"
+								th:data-bs-target="'#staticBackdrop-' + ${movie.id}">
+								Cancella
+							</button>
+						</div>
+					</div>
+					<div th:if="${isAdmin}" class="modal fade " th:id="'staticBackdrop-' + ${movie.id}"
+						data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+						aria-labelledby="staticBackdropLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h1 class="modal-title fs-5" id="staticBackdropLabel">Conferma Operazione</h1>
+									<button type="button" class="btn-close" data-bs-dismiss="modal"
+										aria-label="Close"></button>
+								</div>
+								<div class="modal-body">
+									Sei sicuro di voler cancellare definitivamente questo film?
+								</div>
+								<div class="modal-footer">
+
+									<button type="button" class="btn btn-secondary"
+										data-bs-dismiss="modal">Annulla</button>
+									<a th:href="@{'/admin/deleteMovie' + '/' + ${movie.id}}"><button type="button"
+											class="btn btn-danger">Conferma</button></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+
+		</div>
+
 </body>
 
 </html>
