--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -10,213 +10,244 @@
 
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Film</title>
-	 <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<head>
+	<title>Film</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
+
 <body>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
- <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top"  >
-	
-	<div class="container-fluid" style="max-width: 1500px;">
-	  <a class="navbar-brand" href="/">SiwMovie</a>
-	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarScroll">
-		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-		  <li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="/">Home</a>
-		  </li>
-		  
-		  <li class="nav-item">
-			<a class="nav-link" href="/movies">Film</a>
-		</li>
-		  <li class="nav-item">
-			<a class="nav-link" href="/artists" >Artisti</a>
-		  </li>
-		  <li class="nav-item" th:if="${isAdmin}">
-			<a class="nav-link" href="/success">Pannello di controllo </a>
-			</li>
-		</ul>
-		
-		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
-		  <input class="form-control me-2"  th:value="${year}"  name="year" type="search" placeholder="Cerca un film!" aria-label="Search">
-		  <button class="btn btn-outline-success" type="submit">Cerca</button>
-		</form>
-		<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
-			<span>Ciao, </span>
-			<span th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
-			<span th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.username}"> </span>
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/logout">Logout</a></button>
-		</div>
-		<div th:unless="${#request.userPrincipal}">
-			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/login">Login</a></button>
-		</div>
-	  </div>
-	
-	</div>
-  </nav>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+		crossorigin="anonymous"></script>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
 
-  
+		<div class="container-fluid" style="max-width: 1500px;">
+			<a class="navbar-brand" href="/">SiwMovie</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+				aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarScroll">
+				<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/">Home</a>
+					</li>
 
-  <div th:if="${movie}"  id="movie-container" style="padding-top: 2em;">
-	<div id="blurred" th:if="${movie.primaryImage}" th:style="'background-image: url(/'+${movie.primaryImage.imagePath}+');'" ></div>
-	<div id="black-blurred"></div>
-	<div class="container my-5" id="movie">
-		<div class="flex-container-orizzontale">
-			<div class="flex-container-verticale">
-				<h1 th:text="${movie.title}">Up!</h1>
-	  			<h5 th:text="${movie.year}">2001</h5>
-			</div>
-			<div class="flex-container-verticale c" style="margin-left: auto; padding-right: 2%;" >
-				<h3>Valutazione</h3>
-				<h5 th:text="' '+${movie.rating}"class="fa fa-star checked" style="font-size: x-large; " >2.1</h5>
-			</div>
-			<div class="flex-container-verticale c">
-				<h3 >La tua Valutazione</h3>
-				<h5 th:if="${review}"th:text="' '+${review.rating}"class="fa fa-star checked" style="font-size: x-large;">4.1</h5>
-				<div th:if="${#request.userPrincipal}">
-					<a th:unless="${review}" th:href="'/authenticated/writeReview/'+${movie.id}" ><button type="button" class="btn btn-success">Valuta</button></a>
-					
+					<li class="nav-item">
+						<a class="nav-link" href="/movies">Film</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/artists">Artisti</a>
+					</li>
+					<li class="nav-item" th:if="${isAdmin}">
+						<a class="nav-link" href="/success">Pannello di controllo </a>
+					</li>
+				</ul>
+
+				<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"
+					style="margin-right: 100px; ">
+					<input class="form-control me-2" th:value="${year}" name="year" type="search"
+						placeholder="Cerca un film!" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Cerca</button>
+				</form>
+				<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+					<span>Ciao, </span>
+					<span
+						th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
+					<span
+						th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+						th:text="${#request.userPrincipal.principal.username}"> </span>
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/logout">Logout</a></button>
 				</div>
 				<div th:unless="${#request.userPrincipal}">
-					<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-						Valuta
-					  </button>
-						
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/login">Login</a></button>
 				</div>
 			</div>
+
 		</div>
-	  
-	  <div class="d-flex p-2 justify-content-between align-items-center">
-		
+	</nav>
 
-	
 
-	  </div>
-	  
-	  <div class="d-flex p-2">
-		
-		<img class="img-fluid flex-item" th:if="${movie.primaryImage}" id="movie-image" th:src="${'/'+movie.primaryImage.imagePath} ">
-		<div id="carouselExample" class="carousel slide flex-item fixed-carousel" data-bs-ride="true" style="height: 500px; ">
-			<div class="carousel-inner">
-			  <div th:each="image, imageStat : ${images}">
-				<div th:if="${imageStat.index == 0}" class="carousel-item active">
-				  <img th:src="${'/'+image.imagePath}" class="d-block w-100" alt="..." style="background-size: cover;">
+
+	<div th:if="${movie}" id="movie-container" style="padding-top: 2em;">
+		<div id="blurred" th:if="${movie.primaryImage}"
+			th:style="'background-image: url(/'+${movie.primaryImage.imagePath}+');'"></div>
+		<div id="black-blurred"></div>
+		<div class="container my-5" id="movie">
+			<div class="flex-container-orizzontale">
+				<div class="flex-container-verticale">
+					<h1 th:text="${movie.title}">Up!</h1>
+					<h5 th:text="${movie.year}">2001</h5>
 				</div>
-				<div th:unless="${imageStat.index == 0}" class="carousel-item">
-				  <img th:src="${'/'+image.imagePath}" class="d-block w-100" alt="...">
+				<div class="flex-container-verticale c" style="margin-left: auto; padding-right: 2%;">
+					<h3>Valutazione</h3>
+					<h5 th:text="' '+${movie.rating}" class="fa fa-star checked" style="font-size: x-large; ">2.1</h5>
 				</div>
-			  </div>
-			</div>
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			  <span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			  <span class="visually-hidden">Next</span>
-			</button>
-		  </div>
-		  
-		  
+				<div class="flex-container-verticale c">
+					<h3>La tua Valutazione</h3>
+					<h5 th:if="${review}" th:text="' '+${review.rating}" class="fa fa-star checked"
+						style="font-size: x-large;">4.1</h5>
+					<div th:if="${#request.userPrincipal}">
+						<a th:unless="${review}" th:href="'/authenticated/writeReview/'+${movie.id}"><button
+								type="button" class="btn btn-success">Valuta</button></a>
 
-	  </div>
-	
-	  <div class="container">
-		<a th:if="${movie.director}" th:href="@{|/artist/${movie.director.id}|}" class="link">
-			<h2 th:text="${'Regia: '+movie.director.name+' '+movie.director.surname}">Regia: Christopher Nolan</h2>
-		</a>
-		<h2 th:unless="${movie.director}" th:text="${'Nessun Regista'}">Regia: Christopher Nolan</h2>
-		<div class="container my-5 " th:if="${!movie.actors.isEmpty()}" >
-			<h1 class="" style="margin-bottom: 1em;">Cast</h1>
-			  
-			  <div class="row row-cols-1 row-cols-md-2 g-4 justify-content-start">
-				<div class="card mb-3 text-bg-secondary border-primary" th:each="artist, artistStat : ${movie.actors}" style="max-width: 540px; border-width: 0px; background-color: transparent !important;">
-					<div class="row g-0 " >
-					  <div class="col-md-4" id="img-container">
-						<img id="artist-card" th:src="${'\'+artist.image.imagePath}" class="img-fluid rounded-circle"  alt="..." >
-					  </div>
-					  
-					  <div class="col-md-8">
-						<div class="card-body">
-							<a th:href="@{|/artist/${artist.id}|}" class="link">
-						  <h5 class="card-title" th:text="${artist.name}">Nome artista</h5>
-						  <h5 class="card-title" th:text="${artist.surname}">Cognome artista</h5>
-						  
-						  </a>
-						</div>
-					  </div>
 					</div>
-				  </div>
-			  </div> 
-			   
-		  </div>
-		  
-	  </div>
+					<div th:unless="${#request.userPrincipal}">
+						<button type="button" class="btn btn-success" data-bs-toggle="modal"
+							data-bs-target="#staticBackdrop">
+							Valuta
+						</button>
 
-	  <div class="container my-5" th:if="${!reviews.isEmpty()}"  >
-		<div class="d-flex align-items-center">
-			<h1 class="text-center" >Le ultime recensioni</h1>
-			<a th:href="@{|/movie/${movie.id}/reviews|}">
-				<h5 class="clickable-link">Vedi tutte le recensioni</h5>
-			</a>
-			</div>
-		
-		
-		  
-		  
-		  
-		  <div class="row row-cols-1 row-cols-md-2 g-4">
-			<div class="card mb-3 text-bg-secondary border-primary" th:each="review, reviewStat : ${reviews}" style="max-width: 540px;">
-				<div class="row g-0" >
-				  
-				  
-				  
-					<div class="card-body">
-					  <h5 class="card-title" th:text="${review.user.name+' '+review.user.surname}">Mario rossi</h5>
-					  <h5 class="card-title" th:text="${review.title}">Bel film</h5>
-					  <p class="card-text" th:text="${review.reviewDescription}" >ottime scene</p>
-					  <h5 th:text="' '+${review.rating}"class="fa fa-star checked"  >5</h5>
-					 
-					
-				  </div>
+					</div>
 				</div>
-			  </div>
-		  </div>
-		  
-		  
-		  
-		  
-	  </div>
-	  
-	</div>
-  </div>
+			</div>
 
- 
-  <div class="modal fade " id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-	<div class="modal-dialog">
-	  <div class="modal-content">
-		<div class="modal-header">
-		  <h1 class="modal-title fs-5" id="staticBackdropLabel">Account Richiesto</h1>
-		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-		</div>
-		<div class="modal-body">
-		  Per scrivere una recensione &egrave richiesto un account
-		</div>
-		<div class="modal-footer">
-		 
-		  <a href="/register"><button type="button" class="btn btn-primary">Registrati</button></a>
-		  <a href="/login"><button type="button" class="btn btn-primary">Login</button></a>
-		</div>
-	  </div>
-	</div>
-  </div>
+			<div class="d-flex p-2 justify-content-between align-items-center">
 
-    
-  </body>
+
+
+
+			</div>
+
+			<div class="d-flex p-2">
+
+				<img class="img-fluid flex-item" th:if="${movie.primaryImage}" id="movie-image"
+					th:src="${'/'+movie.primaryImage.imagePath} ">
+				<div id="carouselExample" class="carousel slide flex-item fixed-carousel" data-bs-ride="true"
+					style="height: 500px; ">
+					<div class="carousel-inner">
+						<div th:each="image, imageStat : ${images}">
+							<div th:if="${imageStat.index == 0}" class="carousel-item active">
+								<img th:src="${'/'+image.imagePath}" class="d-block w-100" alt="..."
+									style="background-size: cover;">
+							</div>
+							<div th:unless="${imageStat.index == 0}" class="carousel-item">
+								<img th:src="${'/'+image.imagePath}" class="d-block w-100" alt="...">
+							</div>
+						</div>
+					</div>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+						data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+						data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button>
+				</div>
+
+
+
+			</div>
+
+			<div class="container">
+				<a th:if="${movie.director}" th:href="@{|/artist/${movie.director.id}|}" class="link">
+					<h2 th:text="${'Regia: '+movie.director.name+' '+movie.director.surname}">Regia: Christopher Nolan
+					</h2>
+				</a>
+				<h2 th:unless="${movie.director}" th:text="${'Nessun Regista'}">Regia: Christopher Nolan</h2>
+				<div class="container my-5 " th:if="${!movie.actors.isEmpty()}">
+					<h1 class="" style="margin-bottom: 1em;">Cast</h1>
+
+					<div class="row row-cols-1 row-cols-md-2 g-4 justify-content-start">
+						<div class="card mb-3 text-bg-secondary border-primary"
+							th:each="artist, artistStat : ${movie.actors}"
+							style="max-width: 540px; border-width: 0px; background-color: transparent !important;">
+							<div class="row g-0 ">
+								<div class="col-md-4" id="img-container">
+									<img id="artist-card" th:src="${'\'+artist.image.imagePath}"
+										class="img-fluid rounded-circle" alt="...">
+								</div>
+
+								<div class="col-md-8">
+									<div class="card-body">
+										<a th:href="@{|/artist/${artist.id}|}" class="link">
+											<h5 class="card-title" th:text="${artist.name}">Nome artista</h5>
+											<h5 class="card-title" th:text="${artist.surname}">Cognome artista</h5>
+
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+
+			<div class="container my-5" th:if="${!reviews.isEmpty()}">
+				<div class="d-flex align-items-center">
+					<h1 class="text-center">Le ultime recensioni</h1>
+					<a th:href="@{|/movie/${movie.id}/reviews|}">
+						<h5 class="clickable-link">Vedi tutte le recensioni</h5>
+					</a>
+				</div>
+
+
+
+
+
+				<div class="row row-cols-1 row-cols-md-2 g-4">
+					<div class="card mb-3 text-bg-secondary border-primary" th:each="review, reviewStat : ${reviews}"
+						style="max-width: 540px;">
+						<div class="row g-0">
+
+
+
+							<div class="card-body">
+								<h5 class="card-title" th:text="${review.user.name+' '+review.user.surname}">Mario rossi
+								</h5>
+								<h5 class="card-title" th:text="${review.title}">Bel film</h5>
+								<p class="card-text" th:text="${review.reviewDescription}">ottime scene</p>
+								<h5 th:text="' '+${review.rating}" class="fa fa-star checked">5</h5>
+
+
+							</div>
+						</div>
+					</div>
+				</div>
+
+
+
+
+			</div>
+
+		</div>
+	</div>
+
+
+	<div class="modal fade " id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+		aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fs-5" id="staticBackdropLabel">Account Richiesto</h1>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					Per scrivere una recensione &egrave richiesto un account
+				</div>
+				<div class="modal-footer">
+
+					<a href="/register"><button type="button" class="btn btn-primary">Registrati</button></a>
+					<a href="/login"><button type="button" class="btn btn-primary">Login</button></a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+</body>
+
 </html>
