--- a/src/main/resources/templates/registrationSuccessful.html
+++ b/src/main/resources/templates/registrationSuccessful.html
@@ -9,8 +9,12 @@
 <body>
 	<header>
 		<div th:if="${#request.userPrincipal}">
-			<span th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
-			<span th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}" th:text="${#request.userPrincipal.principal.username}"> </span>
+			<span
+				th:if="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+				th:text="${#request.userPrincipal.principal.attributes.name}"> </span>
+			<span
+				th:unless="${#request.userPrincipal.principal instanceof T(org.springframework.security.oauth2.core.user.DefaultOAuth2User)}"
+				th:text="${#request.userPrincipal.principal.username}"> </span>
 			<a href="/logout">Logout</a>
 		</div>
 		<div th:unless="${#request.userPrincipal}">
@@ -19,7 +23,7 @@
 	</header>
 
 	<div>
-		<a href="/"><img src="/images/logo-siw.png" width="50%"/></a>
+		<a href="/"><img src="/images/logo-siw.png" width="50%" /></a>
 	</div>
 	<h1>Congratulazioni ti sei registrato!</h1>
 	<div>
@@ -35,4 +39,5 @@
 		<span th:text="${user.email}"></span>
 	</div>
 </body>
+
 </html>
