--- a/src/main/resources/templates/admin/formUpdateMovie.html
+++ b/src/main/resources/templates/admin/formUpdateMovie.html
@@ -102,9 +102,13 @@
 					  </button>
 						
 				</div>
+				
 			</div>
+			
 		</div>
-	  
+		<a data-bs-toggle="modal" data-bs-target="#imageModal" class="clickable-link">
+			<h5>Modifica immagine</h5>
+		</a>
 	  <div class="d-flex p-2 justify-content-between align-items-center">
 		
 
@@ -254,7 +258,32 @@
 	  </div>
 	</div>
   </div>
-
+  <div class="modal fade" id="imageModal" tabindex="-1"  aria-hidden="true">
+	<div class="modal-dialog">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <h1 class="modal-title fs-5" id="exampleModalLabel">Modifica Immagine</h1>
+		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		</div>
+		<div class="modal-body">
+		  <form th:action="@{/updateMovieImage}" method="POST" enctype="multipart/form-data">
+			<div class="mb-3">
+			  <label for="recipient-name" class="col-form-label">Nuova Immagine</label>
+			  <input class="form-control" type="file" id="image" name="newImage" accept=".jpg, .png, .jpeg, .gif, .bmp, .tif, .tiff|image/*">
+			</div>
+			<div class="mb-3">
+				<input type="text" class="form-control visually-hidden" id="recipient-name" th:value="${movie.id}" name="movieId">
+			  </div>
+			<button type="submit" class="btn btn-primary">Aggiorna</button>
+		  </form>
+		</div>
+		<div class="modal-footer">
+		  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+		  
+		</div>
+	  </div>
+	</div>
+  </div>
   <div class="modal fade" id="titleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
 	  <div class="modal-content">
